<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    tools:context=".ui.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efefef"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/back_arrow"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_weight="2"
                android:contentDescription="@string/star"
                android:src="@drawable/ic_baseline_star_24" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/menu"
                android:src="@drawable/ic_baseline_more_vert_24" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efefef"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/phoneSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="20dp"
            android:transitionName="card"
            app:cardCornerRadius="80dp">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/item_profile_picture"
                android:scaleType="centerCrop"
                android:transitionName="picture"
                tools:srcCompat="@drawable/dybala" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:transitionName="name"
            tools:text="FirstName LastName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phoneSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_weight="2"
            android:background="#fff"
            android:contentDescription="@string/call_button"
            android:src="@drawable/ic_baseline_phone_24" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="(650) 555-1367" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile" />

        </LinearLayout>


        <ImageButton
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.5"
            android:background="#fff"
            android:contentDescription="@string/video_cam"
            android:paddingStart="10dp"
            android:src="@drawable/ic_baseline_videocam_24" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.5"
            android:background="#fff"
            android:contentDescription="@string/message_icon"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_baseline_message_24" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneSection">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="#fff"
                android:contentDescription="@string/call_button"
                android:src="@drawable/ic_baseline_email_24" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-13dp"
                android:layout_weight="8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="firstnamelastname@gmail.com" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>